Change package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "gutenberg-basics",
+  "name": "cyrale/gutenberg-basics",
   "description": "Modifications on Gutenberg.",
   "keywords": [
     "wordpress",
